@@ -43,6 +43,8 @@ Trunk (unreleased changes)
     HDFS-1442. Api to get delegation token in Hdfs class. (jitendra)
 
     HDFS-1647. Federation: Multiple namenode configuration. (jitendra)
+    
+    HDFS-1751. Intrinsic limits for HDFS files, directories (daryn via boryas).
 
     HDFS-1639. Federation: Add block pool management to FSDataset. (suresh)
 
